fix: link color in dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -118,7 +118,7 @@
   }
 
   a {
-    @apply text-black;
+    @apply text-white;
   }
 
   .svg-banner {
